cargo-features = ["resolver"]

[workspace]
members = [
    "svd",
    "src/pieces",
    "src/pieces/1",
    "src/pieces/2",
    "src/pieces/3",
    "src/pieces/4",
    "src/pieces/5",
    "src/pieces/6",
    "src/pieces/7",
    "src/pieces/8",
    "src/pieces/9",
    "src/pieces/10",
    "src/pieces/11",
    "src/pieces/12",
    "src/periph/uart",
    "src/periph/tim",
]

[package]
name = "drone-tisl-map"
version = "0.12.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
resolver = "2"
exclude = ["/svd_files"]
repository = "https://github.com/drone-os/drone-tisl-map"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = """
Texas Instruments SimpleLink™ peripheral mappings for Drone, an Embedded
Operating System.
"""

[badges]
maintenance = { status = "experimental" }

[features]
default = []
std = ["drone-core/std", "drone-cortexm/std"]
uart = ["drone-tisl-map-periph-uart"]
tim = ["drone-tisl-map-periph-tim"]

[dependencies.drone-core]
version = "0.12.0"
path = "../drone-core"

[dependencies.drone-cortexm]
version = "0.12.0"
path = "../drone-cortexm"

[dependencies.drone-tisl-map-pieces]
version = "=0.12.0"
path = "src/pieces"

[dependencies.drone-tisl-map-periph-uart]
version = "=0.12.0"
path = "src/periph/uart"
optional = true

[dependencies.drone-tisl-map-periph-tim]
version = "=0.12.0"
path = "src/periph/tim"
optional = true
