cargo-features = ["resolver"]

[workspace]
members = [
    "svd",
    "src/pieces",
    "src/pieces/1",
    "src/pieces/2",
    "src/pieces/3",
    "src/pieces/4",
    "src/pieces/5",
    "src/pieces/6",
    "src/pieces/7",
    "src/pieces/8",
    "src/pieces/9",
    "src/pieces/10",
    "src/pieces/11",
    "src/pieces/12",
    "src/periph/ioc",
    "src/periph/gpio",
    "src/periph/sysctrl",
    "src/periph/tim",
    "src/periph/uart",
]

[package]
name = "drone-tisl-map"
version = "0.13.0"
authors = ["Alfred Keller <alfred.keller@centosa.ch"]
edition = "2018"
resolver = "2"
exclude = ["/svd_files"]
repository = "https://github.com/drone-os/drone-tisl-map"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-tisl-map/0.13/drone_tisl_map/"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
    "ti",
    "cc2538",
    "cortex",
    "arm",
    "rtos",
    "bare-metal",
]
categories = [
    "embedded",
    "asynchronous",
    "concurrency",
    "no-std",
    "hardware-support",
]
description = """
Texas Instruments SimpleLink™ peripheral mappings for Drone, an Embedded
Operating System.
"""

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
std = ["drone-core/std", "drone-cortexm/std"]
ioc = ["drone-tisl-map-periph-ioc"]
gpio = ["drone-tisl-map-periph-gpio"]
sysctrl = ["drone-tisl-map-periph-sysctrl"]
tim = ["drone-tisl-map-periph-tim"]
uart = ["drone-tisl-map-periph-uart"]

[dependencies.drone-core]
version = "0.13.0"
path = "../drone-core"

[dependencies.drone-cortexm]
version = "0.13.0"
path = "../drone-cortexm"

[dependencies.drone-tisl-map-pieces]
version = "0.13.0"
path = "src/pieces"

[dependencies.drone-tisl-map-periph-ioc]
version = "0.13.0"
path = "src/periph/ioc"
optional = true

[dependencies.drone-tisl-map-periph-gpio]
version = "=0.13.0"
path = "src/periph/gpio"
optional = true

[dependencies.drone-tisl-map-periph-sysctrl]
version = "=0.13.0"
path = "src/periph/sysctrl"
optional = true

[dependencies.drone-tisl-map-periph-tim]
version = "=0.13.0"
path = "src/periph/tim"
optional = true

[dependencies.drone-tisl-map-periph-uart]
version = "=0.13.0"
path = "src/periph/uart"
optional = true

