cargo-features = ["resolver"]

[package]
name = "drone-tisl-map-periph-ioc"
version = "0.13.0"
authors = ["Alfred Keller <alfred.keller@centosa.ch"]
edition = "2018"
resolver = "2"
repository = "https://github.com/drone-os/drone-tisl-map"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-tisl-map/0.12/drone_tisl_map_periph_ioc/"
license = "MIT OR Apache-2.0"
description = """
STM32 peripheral mappings for Drone, an Embedded Operating System.
"""

[lib]
path = "lib.rs"

[dependencies.drone-core]
version = "0.13.0"
path = "../../../../drone-core"

[dependencies.drone-cortexm]
version = "0.13.0"
path = "../../../../drone-cortexm"

[dependencies.drone-tisl-map-pieces]
version = "=0.13.0"
path = "../../pieces"
