cargo-features = ["resolver"]

[package]
name = "drone-tisl-map-pieces-5"
version = "0.13.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
resolver = "2"
repository = "https://github.com/drone-os/drone-tisl-map"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-tisl-map/0.13/drone_tisl_map_pieces_5/"
license = "MIT OR Apache-2.0"
description = """
Texas Instruments SimpleLink™ peripheral mappings for Drone, an Embedded
Operating System.
"""

[lib]
path = "lib.rs"

[dependencies.drone-core]
version = "0.13.0"
path = "../../../../drone-core"

[dependencies.drone-cortexm]
version = "0.13.0"
path = "../../../../drone-cortexm"
features = ["bit-band"]

[build-dependencies.drone-tisl-map-svd]
version = "=0.13.0"
path = "../../../svd"
