cargo-features = ["resolver"]

[package]
name = "drone-tisl-map-pieces-9"
version = "0.12.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
resolver = "2"
repository = "https://github.com/drone-os/drone-tisl-map"
license = "MIT OR Apache-2.0"
description = """
Texas Instruments SimpleLink™ peripheral mappings for Drone, an Embedded
Operating System.
"""

[lib]
path = "lib.rs"

[dependencies.drone-core]
version = "0.12.0"
path = "../../../../drone-core"

[dependencies.drone-cortexm]
version = "0.12.0"
path = "../../../../drone-cortexm"

[build-dependencies.drone-tisl-map-svd]
version = "=0.12.0"
path = "../../../svd"
